<resources>
    <string name="app_name">Meus Filmes</string>
    <string name="search_title">Cadastre seu filme</string>
    <string name="action_about">Sobre</string>
    <string name="no_item_list">Você ainda não possui filmes na sua lista</string>
    <string name="no_item_list_below">Toque no botão para adicionar seu primeiro filme</string>
    <string name="txt_search_movie">Título do filme</string>
    <string name="string_confirm_minusculo">pesquisar</string>
...
