...

    <include
        android:id="@+id/topbar"
        layout="@layout/toolbar_layout" />

    <LinearLayout
        android:id="@+id/layout_search"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/topbar"
        android:orientation="vertical">

        <TextView
...
